--- a/BlazorQuickGridRemoteData/Client/Pages/Index.razor
+++ b/BlazorQuickGridRemoteData/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using BlazorQuickGridRemoteData.Shared;
 @using Microsoft.AspNetCore.Components.QuickGrid;
 
-<QuickGrid Items="products.AsQueryable()" Pagination="@pagination">
+<QuickGrid ItemsProvider="productsProvider" Pagination="@pagination">
     <PropertyColumn Property="p => p.Name" />
 </QuickGrid>
 
@@ -12,10 +12,14 @@
 @code {
     List<Product> products = new List<Product>();
     PaginationState pagination = new PaginationState { ItemsPerPage = 5 };
+    GridItemsProvider<Product>? productsProvider;
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await Http.GetFromJsonAsync<List<Product>>("api/product");
-        products = result;
+        productsProvider = async req =>
+        {
+            var response = await Http.GetFromJsonAsync<ProductResponse>($"api/product/{req.StartIndex}/{req.Count}");
+            return GridItemsProviderResult.From(items: response.Products, totalItemCount: response.Count);
+        };
     }
 }
